fixed widget name and resized image for mybinder

--- a/Notebooks/demo3D.ipynb
+++ b/Notebooks/demo3D.ipynb
@@ -52,8 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image3D = skimage.io.imread('../Samples/training.tif')\n",
-    "image3Db = skimage.io.imread('../Samples/training_groundtruth.tif')"
+    "image3D = skimage.io.imread('../Samples/training.tif')[::2,::2,::2]\n",
+    "image3Db = skimage.io.imread('../Samples/training_groundtruth.tif')[::2,::2,::2]"
    ]
   },
   {
@@ -200,7 +200,7 @@
     "ipw.interactive(plot, plane = ipw.IntSlider(min = 0, max = image3D.shape[0]-1, value = 0, step = 1,\n",
     "        continuous_update = False), image = ipw.fixed(image3D),image_label = ipw.fixed(image_label),\n",
     "               show_image = ipw.Checkbox(value = True, description = 'Show image'),\n",
-    "               show_labels = ipw.Checkbox(value = True, description = 'Show image'))"
+    "               show_labels = ipw.Checkbox(value = True, description = 'Show labels'))"
    ]
   },
   {
