removed html saving for voila

--- a/Notebooks/demo3D.ipynb
+++ b/Notebooks/demo3D.ipynb
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ipv.save('3d_mito_ipv.html')"
+    "#ipv.save('3d_mito_ipv.html')"
    ]
   }
  ],
